# gltf-viewer

./: .dockerignore  .flake8  .gitignore  CMakeLists.txt  Dockerfile  noxfile.py  pyproject.toml
.devenv/: __main__.py  bash_init.sh
src/: Data.hpp  ViewerApplication.cpp  ViewerApplication.hpp  main.cpp
src/gltf_viewer/: __main__.py
src/gltf_viewer/utils/: cli.py
src/shaders/: bitangent.fs.glsl  debug.fs.glsl  diffuse_directional_light.fs.glsl  forward.vs.glsl  magenta.fs.glsl  normals.fs.glsl  normals_texture.fs.glsl  pbr_directional_light.fs.glsl  pbr_directional_light_shadows.fs.glsl  shadowMapShader.fs.glsl  shadowMapShader.vs.glsl  simpleDepthShader.vs.glsl  tangent.fs.glsl
src/utils/: cameras.cpp  cameras.hpp  images.cpp  images.hpp  shaders.hpp
tests/: conftest.py  test_cli.py  test_triangle.py  test_viewer.py
